--- a/app/landing/landing.html
+++ b/app/landing/landing.html
@@ -1,9 +1,9 @@
 <section id="invest" class="pt-5 pb-5">
     <div class="container">
-        <h1 class="text-center display-4 pb-5">Invest</h1>
-        <h2>Take a full round-trip with DEMO token!</h2>
+        <h1 class="display-4 pb-5 text-center">Invest</h2>
+        <h1 class="display-1 pb-5">Take a full round-trip with DEMO token!</h2>
         <p class="lead">
-            We use test environments of Bitcoin and Ethereum blockchains to host the DEMO token and run our demontrational ICO/ITO campaign.
+            We use test environments of Bitcoin and Ethereum blockchains to host the DEMO token and run our demonstrational ICO/ITO campaign.
             Press Particapate button below to register and "buy" some tokens. It's free :)
         </p>
         <a class="btn btn-primary btn-lg" href="registration">Participate</a>
@@ -45,7 +45,7 @@
 <section id="contacts" class="pt-5 pb-5 bg-light">
     <div class="container">
         <h1 class="text-center display-4 pb-5">Contacts</h1>
-        <h2>Lykke would like to know your opinion.</h2>
+        <h3>Lykke would like to know your opinion.</h2>
         <p class="lead">Please feel free to contact us to make a suggestion, get information, or leave a comment:</p>
         <a class="btn btn-primary btn-lg" href="mailto:lykke@lykke.com">lykke@lykke.com</a>
     </div>
