--- a/app/app.html
+++ b/app/app.html
@@ -1,12 +1,11 @@
 <header>
     <nav class="navbar navbar-dark bg-dark navbar-expand-md">
         <div class="container">
-            <a class="navbar-brand" href="/"><img src="content/images/logo-lykke.svg" width="30" height="30" alt="" class="align-bottom"> Lykke Demo ICO</a>
+            <a class="navbar-brand" href="/"><img src="content/images/logo-lykke.svg" width="30" height="30" class="align-bottom"> Lykke Demo ICO</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <span></span>
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="/#invest">Invest</a>
@@ -25,9 +24,7 @@
         </div>
     </nav>
 </header>
-
 <ng-view></ng-view>
-
 <footer class="pt-5 pb-5 bg-secondary text-light">
     <div class="container">
         <div class="row">
