--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.9/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.9/angular-route.min.js"></script>
     <script src="app/app.js"></script>
+    <script src="app/urlService.js"></script>
     <script src="app/landing/landing.js"></script>
     <script src="app/registration/registration.js"></script>
-    <script src="app/summary/summary.js"></script>    
+    <script src="app/summary/summary.js"></script>
   </body>
 </html>
