--- a/app/landing/landing.html
+++ b/app/landing/landing.html
@@ -14,8 +14,9 @@
         <h1 class="text-center display-4 pb-5">About</h1>
         <p class="lead">
             Current page is a demonstration of typical public portal of ICO/ITO campaign.
-            <a href="https://www.lykke.com/ico-platform">Here</a> you can find more information about our ICO platform and it's facilities.
-            Also, take a look on our <a href="https://www.lykke.com/ico-faq">Frequently Asked Questions</a> about ICO/ITO.
+            <a href="https://www.lykke.com/ico-platform">Here</a> you can find more information about our ICO platform and it's facilities. Also, take a look on our
+            <a
+                href="https://www.lykke.com/ico-faq">Frequently Asked Questions</a> about ICO/ITO.
         </p>
         <p class="lead">
             But if you are ready to start immediately - you can apply for an ICO right now!
@@ -42,7 +43,7 @@
 <section id="contacts" class="pt-5 pb-5 bg-light">
     <div class="container">
         <h1 class="text-center display-4 pb-5">Contacts</h1>
-        <h3>Lykke would like to know your opinion.</h2>
+        <h3>Lykke would like to know your opinion.</h3>
         <p class="lead">Please feel free to contact us to make a suggestion, get information, or leave a comment:</p>
         <a class="btn btn-primary btn-lg" href="mailto:lykke@lykke.com">lykke@lykke.com</a>
     </div>
