Components renamed to prevent conflicts with Bootstrap. Some content added.

--- a/app/registration/registration.html
+++ b/app/registration/registration.html
@@ -1,4 +1,4 @@
-<section class="pt-5 pb-5">
+<section class="py-5">
     <div class="container">
         <h1 class="display-4 text-center pb-5">Participate</h1>
         <div ng-show="$ctrl.showTermsAndConditions()">
@@ -6,7 +6,7 @@
                 I hereby acknowledge that I have read and understood the terms and conditions as provided on the
                 <a href="https://www.lykke.com/cp/terms-and-regulation">Terms and Regulation</a> page and I agree to all of the terms and conditions, and, in particular:
             </p>
-            <div class="row pt-5 pb-5">
+            <div class="row py-5">
                 <p class="lead col-md-4 text-center">
                     You are not a US citizen or residing in the US.
                 </p>
