--- a/app/401.html
+++ b/app/401.html
@@ -1,4 +1,4 @@
-<section id="invest" class="pt-5 pb-5">
+<section id="invest" class="py-5">
     <div class="container">
         <h1 class="display-4 pb-5 text-center">Not Authorized</h1>
     </div>
