--- a/app/app.html
+++ b/app/app.html
@@ -1,8 +1,10 @@
 <header>
     <nav class="navbar navbar-dark bg-dark navbar-expand-md">
         <div class="container">
-            <a class="navbar-brand" href="/"><img src="content/images/logo-lykke.svg" width="30" height="30" class="align-bottom"> Lykke Demo ICO</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="/">
+                <img src="content/images/logo-lykke.svg" width="30" height="30" class="align-bottom"> Lykke Demo ICO</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -24,20 +26,59 @@
         </div>
     </nav>
 </header>
+<section class="pt-5">
+    <div class="container">
+        <div class="alert alert-info alert-dismissible fade show" role="alert">
+            Current page is a demonstration/description of typical public portal of ICO/ITO campaign. All information about Lykke as
+            well as links and documents are provided for demonstration purposes only.
+            <button type="button" class="close" data-dismiss="alert">
+                <span>&times;</span>
+            </button>
+        </div>
+    </div>
+</section>
 <ng-view></ng-view>
-<footer class="pt-5 pb-5 bg-secondary text-light">
+<footer class="py-5 bg-secondary text-light">
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-6">© 2018 Lykke, Inc. All rights reserved</div>
             <div class="col-sm-12 col-md-6 d-md-flex justify-content-md-end">
                 <ul class="list-inline mb-0">
-                    <li class="list-inline-item"><a href="https://www.facebook.com/LykkeCity" target="_blank"><i class="fab fa-lg fa-facebook"></i></a></li>
-                    <li class="list-inline-item"><a href="https://twitter.com/lykke" target="_blank"><i class="fab fa-lg fa-twitter"></i></a></li>
-                    <li class="list-inline-item"><a href="http://instagram.com/lykkecity" target="_blank"><i class="fab fa-lg fa-instagram"></i></a></li>
-                    <li class="list-inline-item"><a href="https://www.youtube.com/c/LykkeX" target="_blank"><i class="fab fa-lg fa-youtube"></i></a></li>
-                    <li class="list-inline-item"><a href="https://www.linkedin.com/company/lykke" target="_blank"><i class="fab fa-lg fa-linkedin"></i></a></li>
-                    <li class="list-inline-item"><a href="https://www.reddit.com/r/lykke/" target="_blank"><i class="fab fa-lg fa-reddit"></i></a></li>
-                    <li class="list-inline-item"><a href="https://t.co/TmjMYnQD7T" target="_blank"><i class="fab fa-lg fa-telegram"></i></a></li>
+                    <li class="list-inline-item">
+                        <a href="https://www.facebook.com/LykkeCity" target="_blank">
+                            <i class="fab fa-lg fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://twitter.com/lykke" target="_blank">
+                            <i class="fab fa-lg fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="http://instagram.com/lykkecity" target="_blank">
+                            <i class="fab fa-lg fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.youtube.com/c/LykkeX" target="_blank">
+                            <i class="fab fa-lg fa-youtube"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.linkedin.com/company/lykke" target="_blank">
+                            <i class="fab fa-lg fa-linkedin"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.reddit.com/r/lykke/" target="_blank">
+                            <i class="fab fa-lg fa-reddit"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://t.co/TmjMYnQD7T" target="_blank">
+                            <i class="fab fa-lg fa-telegram"></i>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
