Added refund addresses. Fixed warning margin.

--- a/app/app.html
+++ b/app/app.html
@@ -26,9 +26,9 @@
         </div>
     </nav>
 </header>
-<section class="pt-5">
+<section>
     <div class="container">
-        <div class="alert alert-info alert-dismissible fade show" role="alert">
+        <div class="alert alert-info alert-dismissible fade show mt-5" role="alert">
             Current page is a demonstration/description of typical public portal of ICO/ITO campaign. All information about Lykke as
             well as links and documents are provided for demonstration purposes only.
             <button type="button" class="close" data-dismiss="alert">
